# harness-tier

./: .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.ko.md  README.md  USAGE.ko.md  USAGE.md  flow-config.example.yaml  flow-tiers.yaml  pre-commit-hooks.example.yaml  pyproject.toml  teams-webhooks.example.json  vdev-config.example.yaml  vdev-tiers.yaml
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: skill-frontmatter.md
.github/scripts/: pin-marketplace-sha.py
.github/workflows/: branch-naming.yml  entropy-check.yml  release.yml  unit-test.yml
agents/: harness-code-analyzer.md  harness-critic.md  harness-researcher.md
docs/plugins/: marketplace-auto-update.md
evals/: cases.yaml  run.py  scores.json  scores.py  stream.py
evals/fixtures/: stream-invoked.jsonl  stream-quiet.jsonl
github/: api-contract.workflow.example.yml  branch-naming.workflow.example.yml  deploy.cratesio.workflow.example.yml  deploy.dockerhub.workflow.example.yml  deploy.ghcr.workflow.example.yml  deploy.gradle.workflow.example.yml  deploy.maven-central.workflow.example.yml  deploy.npm.workflow.example.yml  deploy.nuget.workflow.example.yml  deploy.pypi.workflow.example.yml  entropy-check.workflow.example.yml  release.cargo-release.workflow.example.yml  release.gitversion.workflow.example.yml  release.jreleaser.workflow.example.yml  release.python-semantic-release.workflow.example.yml  release.semantic-release.workflow.example.yml  unit-test.workflow.example.yml
hooks/: hooks.json  inject-risk-tiers.sh
rules/: harness-rules.md  risk-tiers.md
scripts/: _harness_paths.py  _vway_paths.py  bump_version.py  check-deps.sh  check-token-write.sh  finalize_prerelease.py  flow_gate_check.py  flow_init_setup.py  handoff_resolve.py  harness_insight.py  harness_scaffold.py  notify-push.sh  precommit-runner.sh  skill_sandbox.py  teamer_api.py  teams_alert.py  vdev_gate_check.py  vdev_init_setup.py
skills/doc-sync/: SKILL.md
skills/flow/: SKILL.md
skills/flow-init/: SKILL.md
skills/flow-uninstall/: SKILL.md
skills/vdev/: SKILL.md
tests/: test_bump_version.py  test_check_token_write.py  test_deploy_render.py  test_evals.py  test_finalize_prerelease.py  test_flow_gate_check.py  test_flow_init_setup.py  test_handoff_resolve.py  test_harness_insight.py  test_harness_paths.py  test_harness_scaffold.py  test_release_integration.py  test_release_workflow.py  test_skills.py  test_teamer_api.py  test_teams_alert.py  test_vdev_gate_check.py  test_vdev_init_setup.py  test_vway_paths.py
(+121 files in other folders)
