[project]
name = "harness-tier"
version = "0.1.10-rc.1"
license = "Apache-2.0"
# Environment floor for the plugin's own development/testing (ruff·pytest). The gate
# scripts deployed to the host require python 3.8+ at runtime (walrus) — unrelated to this line, so don't confuse them.
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "pre-commit>=3.5", "python-semantic-release>=10,<11"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [".claude-plugin/plugin.json:version"]
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.stage]
match = "stage"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.changelog]
default_templates.changelog_file = "CHANGELOG.md"
# Keep the changelog (and thus the GitHub Release body) signal-only: exclude plumbing
# commit types. PSR ships no default exclusions — these are its own recommended set.
exclude_commit_patterns = [
  'chore(?:\([^)]*?\))?: .+',
  'ci(?:\([^)]*?\))?: .+',
  'refactor(?:\([^)]*?\))?: .+',
  'style(?:\([^)]*?\))?: .+',
  'test(?:\([^)]*?\))?: .+',
  'build\((?!deps\): .+)',
  'Merged? .*',
  'Initial Commit.*',
  '^\d+\.\d+\.\d+',
]
